--- a/Sheaft.IntegrationTests/Sheaft.IntegrationTests.csproj
+++ b/Sheaft.IntegrationTests/Sheaft.IntegrationTests.csproj
@@ -22,4 +22,8 @@
       <ProjectReference Include="..\Sheaft.Infrastructure\Sheaft.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Features" />
+    </ItemGroup>
+
 </Project>
