--- a/Sheaft.Domain/Sheaft.Domain.csproj
+++ b/Sheaft.Domain/Sheaft.Domain.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Nanoid" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
