--- a/Sheaft.Web.Portal/package.json
+++ b/Sheaft.Web.Portal/package.json
@@ -4,9 +4,13 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "run-p dev:*",
+    "dev:routify": "routify",
+    "dev:vite": "vite",
     "preview": "vite preview",
+    "build": "run-s build:*",
+    "build:routify": "routify -b",
+    "build:vite": "vite build",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "format": "prettier --write ./src/**/*.{js,svelte,html,ts}",
     "lint": "eslint ./src/**/*.{js,ts,svelte}",
@@ -21,6 +25,7 @@
     "autoprefixer": "^10.4.7",
     "eslint": "^8.15.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.13",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
@@ -34,6 +39,6 @@
     "vite": "^2.9.8"
   },
   "dependencies": {
-    "@roxi/routify": "^3.0.0-next.90"
+    "@roxi/routify": "^2.18.5"
   }
 }
