--- a/Sheaft.Web.Portal/tsconfig.json
+++ b/Sheaft.Web.Portal/tsconfig.json
@@ -11,7 +11,7 @@
     "isolatedModules": true,
     "paths": {
       "$routify/*": [".routify/*"],
-      "$routes/*": ["src/routes/*"],
+      "$pages/*": ["src/pages/*"],
       "$components/*": ["src/components/*"],
       "$utils/*": ["src/utils/*"],
       "$stores/*": ["src/stores/*"],
