--- a/Sheaft.Web.Portal/package.json
+++ b/Sheaft.Web.Portal/package.json
@@ -40,6 +40,8 @@
   },
   "dependencies": {
     "@roxi/routify": "^2.18.5",
-    "qs": "^6.10.3"
+    "axios": "^0.27.2",
+    "qs": "^6.10.3",
+    "svelte-local-storage-store": "^0.2.6"
   }
 }
