--- a/Sheaft.Web.Portal/tsconfig.json
+++ b/Sheaft.Web.Portal/tsconfig.json
@@ -16,6 +16,7 @@
       "$utils/*": ["src/utils/*"],
       "$stores/*": ["src/stores/*"],
       "$assets/*": ["src/assets/*"],
+      "$configs/*": ["src/configs/*"],
       "$styles/*": ["src/styles/*"]
     }
   },
