--- a/Sheaft.Web.Portal/package.json
+++ b/Sheaft.Web.Portal/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@roxi/routify": "^2.18.5",
     "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "qs": "^6.10.3",
     "svelte-local-storage-store": "^0.2.6"
   }
