--- a/Sheaft.Web.Portal/package.json
+++ b/Sheaft.Web.Portal/package.json
@@ -47,6 +47,7 @@
     "@roxi/routify": "^2.18.5",
     "axios": "^0.27.2",
     "jwt-decode": "^3.1.2",
+    "nanoid": "^3.3.4",
     "qs": "^6.10.3",
     "svelte-fa": "^2.4.0",
     "svelte-local-storage-store": "^0.2.6"
