--- a/Sheaft.Web.Portal/package.json
+++ b/Sheaft.Web.Portal/package.json
@@ -51,6 +51,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@roxi/routify": "^2.18.5",
     "axios": "^0.25.0",
+    "felte": "^1.2.2",
     "form-data": "^4.0.0",
     "jwt-decode": "^3.1.2",
     "nanoid": "^3.3.4",
