--- a/Sheaft.Web.Portal/package.json
+++ b/Sheaft.Web.Portal/package.json
@@ -53,6 +53,7 @@
     "axios": "^0.25.0",
     "felte": "^1.2.2",
     "form-data": "^4.0.0",
+    "jimmy-js": "^0.5.1",
     "jwt-decode": "^3.1.2",
     "nanoid": "^3.3.4",
     "openapi-client-axios": "^5.1.2",
