--- a/Sheaft.Web.Portal/tsconfig.json
+++ b/Sheaft.Web.Portal/tsconfig.json
@@ -20,13 +20,17 @@
       "$pages/*": ["./src/pages/*"],
       "$components/*": ["./src/components/*"],
       "$utils/*": ["./src/utils/*"],
-      "$stores/*": ["./src/stores/*"],
       "$assets/*": ["./src/assets/*"],
       "$configs/*": ["./src/configs/*"],
       "$styles/*": ["./src/styles/*"],
       "$settings/*": ["./src/settings/*"],
       "$types/*": ["./src/types/*"],
-      "$enums/*": ["./src/enums/*"]
+      "$enums/*": ["./src/enums/*"],
+      "$commands/*": ["./src/commands/*"],
+      "$queries/*": ["./src/queries/*"],
+      "$notifications/*": ["./src/notifications/*"],
+      "$services/*": ["./src/services/*"],
+      "$stores/*": ["./src/stores/*"]
     },
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
