--- a/Sheaft.Web.Portal/tsconfig.json
+++ b/Sheaft.Web.Portal/tsconfig.json
@@ -5,8 +5,9 @@
     "forceConsistentCasingInFileNames": true,
     "target": "ES6",
     "module": "ES6",
-    "strict": true,
-    "strictBindCallApply": true,
+    "strict": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
     "importHelpers": true,
     "moduleResolution": "node",
     "isolatedModules": true,
