--- a/Sheaft.Web.Portal/package.json
+++ b/Sheaft.Web.Portal/package.json
@@ -51,6 +51,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@roxi/routify": "^2.18.5",
     "axios": "^0.25.0",
+    "date-fns": "^2.28.0",
     "felte": "^1.2.2",
     "form-data": "^4.0.0",
     "jimmy-js": "^0.5.1",
@@ -59,6 +60,7 @@
     "openapi-client-axios": "^5.1.2",
     "qs": "^6.10.3",
     "svelte-fa": "^2.4.0",
-    "svelte-local-storage-store": "^0.2.6"
+    "svelte-local-storage-store": "^0.2.6",
+    "svelte-simple-modal": "^1.3.4"
   }
 }
