--- a/Sheaft.Web.Portal/package.json
+++ b/Sheaft.Web.Portal/package.json
@@ -45,6 +45,8 @@
     "vite": "^2.9.8"
   },
   "dependencies": {
+    "@felte/reporter-dom": "^1.1.2",
+    "@felte/validator-vest": "^1.0.9",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
@@ -61,6 +63,7 @@
     "qs": "^6.10.3",
     "svelte-fa": "^2.4.0",
     "svelte-local-storage-store": "^0.2.6",
-    "svelte-simple-modal": "^1.3.4"
+    "svelte-simple-modal": "^1.3.4",
+    "vest": "^4.4.1"
   }
 }
