--- a/Sheaft.Web.Portal/package.json
+++ b/Sheaft.Web.Portal/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "commonjs",
   "scripts": {
-    "dev": "run-p dev:*",
+    "dev": "run-p openapi dev:*",
     "dev:routify": "routify",
     "dev:vite": "vite",
     "preview": "vite preview",
@@ -16,8 +16,7 @@
     "lint": "eslint ./src/**/*.{js,ts,svelte}",
     "lint:fix": "eslint --fix ./src/**/*.{js,ts,svelte}",
     "prelint": "npm run format",
-    "dev:types": "typegen ..\\Sheaft.Web.Api\\wwwroot\\swagger\\v1\\swagger.yaml > .\\src\\features\\api.d.ts",
-    "build:types": "typegen ..\\Sheaft.Web.Api\\wwwroot\\swagger\\v1\\swagger.yaml > .\\src\\features\\api.d.ts"
+    "openapi": "copyfiles -f \"../Sheaft.Web.Api/wwwroot/swagger/v1/*.*\" \"./src/features/openapi\" && typegen ./src/features/openapi/swagger.yaml > ./src/features/api.d.ts"
   },
   "devDependencies": {
     "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
@@ -29,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "autoprefixer": "^10.4.7",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.15.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "npm-run-all": "^4.1.5",
