--- a/Sheaft.Web.Portal/package.json
+++ b/Sheaft.Web.Portal/package.json
@@ -63,6 +63,7 @@
     "qs": "^6.10.3",
     "svelte-fa": "^2.4.0",
     "svelte-local-storage-store": "^0.2.6",
+    "svelte-select": "^4.4.7",
     "svelte-simple-modal": "^1.3.4",
     "vest": "^4.4.1"
   }
