--- a/Sheaft.Web.Portal/package.json
+++ b/Sheaft.Web.Portal/package.json
@@ -25,6 +25,7 @@
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.43",
     "@tsconfig/svelte": "^3.0.0",
     "@types/node": "^17.0.33",
+    "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
     "autoprefixer": "^10.4.7",
@@ -60,7 +61,7 @@
     "jwt-decode": "^3.1.2",
     "nanoid": "^3.3.4",
     "openapi-client-axios": "^5.1.2",
-    "qs": "^6.10.3",
+    "qs": "^6.11.0",
     "svelte-fa": "^2.4.0",
     "svelte-local-storage-store": "^0.2.6",
     "svelte-select": "^4.4.7",
